--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -776,7 +776,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{ត្រូវតែមានតួដែលមិនមែនជាអក្សរយ៉ាងហោចណាស់ 1}other{ត្រូវតែមានតួដែលមិនមែនជាអក្សរយ៉ាងហោចណាស់ #}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{ត្រូវតែមាន​តួដែលមិនមែន​ជាលេខ​យ៉ាងហោចណាស់ 1}other{ត្រូវតែមាន​តួដែលមិនមែន​ជាលេខ​យ៉ាងហោចណាស់ #}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"អ្នក​គ្រប់គ្រង​ឧបករណ៍​មិន​អនុញ្ញាត​ឲ្យ​ប្រើ​ពាក្យ​សម្ងាត់​បច្ចុប្បន្ន​ទេ"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"មិន​អនុញ្ញាត​ឲ្យ​មានលំដាប់ឡើង ចុះ ឬច្រំដែលទេ"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"មិន​អនុញ្ញាត​ឲ្យ​មានលំដាប់ឡើង ចុះ ឬដដែលៗទេ"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"បញ្ជាក់"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"លុប"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"ចាក់សោអេក្រង់ត្រូវបានផ្លាស់ប្ដូរហើយ។ សូមព្យាយាម​ម្ដងទៀត ដោយប្រើ​ការចាក់សោអេក្រង់​ថ្មី។"</string>
