--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -2263,7 +2263,7 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"ಶ್ರವಣ ಸಾಧನಗಳ ಕುರಿತು"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="256061045064940818">"ASHA ಅಥವಾ LE ಆಡಿಯೋ ಮೂಲಕ ಬೆಂಬಲಿಸದಿರುವ ಇತರ ಹಿಯರಿಂಗ್ ಸಾಧನಗಳನ್ನು ಹುಡುಕಲು, "<b>"ಹೊಸ ಸಾಧನವನ್ನು ಪೇರ್ ಮಾಡಿ"</b>" ಎಂಬುದನ್ನು ಟ್ಯಾಪ್ ಮಾಡಿ ಮತ್ತು "<b>"ಇನ್ನಷ್ಟು ಸಾಧನಗಳನ್ನು ನೋಡಿ"</b></string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"ಶ್ರವಣ ಸಾಧನವನ್ನು ಪೇರ್ ಮಾಡಿ"</string>
-    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"ನೀವು ಈ ಪುಟದಲ್ಲಿ ASHA ಮತ್ತು LE ಆಡಿಯೋ ಹಿಯರಿಂಗ್ ಸಾಧನಗಳನ್ನು ಪೇರ್ ಮಾಡಬಹುದು. ನಿಮ್ಮ ಹಿಯರಿಂಗ್ ಸಾಧನವನ್ನು ಆನ್ ಮಾಡಲಾಗಿದೆ ಮತ್ತು ಪೇರ್ ಮಾಡಲು ಸಿದ್ಧವಾಗಿದೆ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."</string>
+    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"ನೀವು ಈ ಪುಟದಲ್ಲಿ ASHA ಮತ್ತು LE ಆಡಿಯೋ ಶ್ರವಣ ಸಾಧನಗಳನ್ನು ಪೇರ್ ಮಾಡಬಹುದು. ನಿಮ್ಮ ಶ್ರವಣ ಸಾಧನವನ್ನು ಆನ್ ಮಾಡಲಾಗಿದೆ ಮತ್ತು ಅದು ಪೇರ್ ಮಾಡಲು ಸಿದ್ಧವಾಗಿದೆ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"ಲಭ್ಯವಿರುವ ಶ್ರವಣ ಸಾಧನಗಳು"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"ನಿಮ್ಮ ಶ್ರವಣ ಸಾಧನ ಕಾಣಿಸುತ್ತಿಲ್ಲವೇ?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"ಹೆಚ್ಚಿನ ಸಾಧನಗಳನ್ನು ನೋಡಿ"</string>
@@ -3579,7 +3579,7 @@
     <string name="app_notification_fsi_permission_summary" msgid="7673487977631068039">"ಸಾಧನ ಲಾಕ್ ಆಗಿರುವಾಗ ಪೂರ್ಣ ಸ್ಕ್ರೀನ್‌ ಅನ್ನು ಆವರಿಸಿಕೊಳ್ಳಲು ನೋಟಿಫಿಕೇಶನ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="notification_badge_title" msgid="6854537463548411313">"ನೋಟಿಫಿಕೇಶನ್‍ ಡಾಟ್ ಅನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"ನೋಟಿಫಿಕೇಶನ್‍ ಡಾಟ್‌ ತೋರಿಸಿ"</string>
-    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"\'ಅಡಚಣೆ ಮಾಡಬೇಡಿ\' ಅನ್ನು ಮರೆಮಾಡಿ"</string>
+    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"\'ಅಡಚಣೆ ಮಾಡಬೇಡಿ\' ಅನ್ನು ಪರಿಗಣಿಸಬೇಡಿ"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"ಅಡಚಣೆ ಮಾಡಬೇಡ ಆನ್ ಇರುವಾಗಲೂ ಈ ಅಧಿಸೂಚನೆಗಳು ಮುಂದುವರಿಯಲು ಅವಕಾಶ ಮಾಡಿಕೊಡಿ"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"ಲಾಕ್ ಸ್ಕ್ರೀನ್"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"ಮುಗಿದಿದೆ"</string>
@@ -4794,7 +4794,7 @@
     <string name="overlay_settings_summary" msgid="2745336273786148166">"ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಸ್ಕ್ರೀನ್‌ಗಳನ್ನು ಓವರ್‌ಲೇ ಮಾಡಲು ಇತರ ಆ್ಯಪ್‌ಗಳಲ್ಲಿ ಡಿಸ್‌ಪ್ಲೇ ಮಾಡಬಹುದಾದ ಆ್ಯಪ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="allow_mock_modem" msgid="3832264806530479214">"ಅಣಕು ಮೋಡೆಮ್ ಅನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"ಇನ್‌ಸ್ಟ್ರುಮೆಂಟೇಶನ್ ಪರೀಕ್ಷೆಗಾಗಿ ಅಣಕು ಮೋಡೆಮ್ ಸೇವೆಯನ್ನು ರನ್ ಮಾಡಲು ಈ ಸಾಧನಕ್ಕೆ ಅನುಮತಿಸಿ. ಫೋನ್‌ನ ಸಾಮಾನ್ಯ ಬಳಕೆಯ ಸಮಯದಲ್ಲಿ ಇದನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಬೇಡಿ"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"ಸ್ಕ್ರೀನ್ ಹಂಚಿಕೆ ಸಂರಕ್ಷಣೆಗಳನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"ಸ್ಕ್ರೀನ್ ಹಂಚಿಕೆ ರಕ್ಷಣೆಗಳನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ"</string>
     <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="932295234626582052">"ಸ್ಕ್ರೀನ್‌‌ ಹಂಚಿಕೊಳ್ಳುವಿಕೆಯ ಸಮಯದಲ್ಲಿ ಸಿಸ್ಟಂ ಅನ್ವಯಿಕ ಆ್ಯಪ್ ಮತ್ತು ನೋಟಿಫಿಕೇಶನ್‌ಗಳ ಸಂರಕ್ಷಣೆಯನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸುತ್ತದೆ"</string>
     <string name="media_controls_title" msgid="403271085636252597">"ಮಾಧ್ಯಮ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ಮೀಡಿಯಾ ಪ್ಲೇಯರ್ ಅನ್ನು ಪಿನ್ ಮಾಡಿ"</string>
