--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -2263,7 +2263,7 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"O slušnih aparatih"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="256061045064940818">"Če želite poiskati druge slušne pripomočke, ki jih protokol ASHA ali LE zvok ne podpira, se dotaknite "<b>"Seznanitev nove naprave"</b>" &gt; "<b>"Ogled več naprav"</b></string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Seznanitev slušnega aparata"</string>
-    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"Na tej strani lahko seznanite slušne aparate, združljive s funkcijama ASHA in LE zvok. Poskrbite, da je slušni aparat vklopljen in pripravljen za seznanjanje."</string>
+    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"Na tej strani lahko seznanite slušne pripomočke, združljive s funkcijama ASHA in LE zvok. Poskrbite, da je slušni pripomoček vklopljen in pripravljen za seznanjanje."</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Razpoložljivi slušni pripomočki"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Ali vaš slušni pripomoček ni prikazan?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Ogled več naprav"</string>
