--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -2345,7 +2345,7 @@
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"Όχι"</string>
     <string name="accessibility_dialog_button_stop" msgid="7584815613743292151">"Απενεργοπ."</string>
     <string name="accessibility_dialog_button_cancel" msgid="8625997437316659966">"Ενεργό"</string>
-    <string name="disable_service_title" msgid="8178020230162342801">"Απενεργοποίηση <xliff:g id="SERVICE">%1$s</xliff:g>;"</string>
+    <string name="disable_service_title" msgid="8178020230162342801">"Απενεργοποίηση του <xliff:g id="SERVICE">%1$s</xliff:g>;"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"Δεν έχουν εγκατασταθεί υπηρεσίες"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"Δεν έχει επιλεγεί κάποια υπηρεσία"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"Δεν υπάρχει περιγραφή."</string>
