--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -645,7 +645,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Odaberite zaključavanje zaslona"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Odaberite novo zaključavanje zaslona"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Zaključavanje za poslovne aplikacije"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Novo zaključ. poslov. prof."</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Odaberite novo zaključavanje poslovnog profila"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Radi dodatne sigurnosti, postavite dodatni način zaključavanja zaslona"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Odaberite dodatni način zaključavanja zaslona"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Ako zaboravite radnju za zaključavanje zaslona, IT administrator ga ne može poništiti."</string>
@@ -776,7 +776,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{Mora sadržavati najmanje 1 znak koji nije slovo}one{Mora sadržavati najmanje # znak koji nije slovo}few{Mora sadržavati najmanje # znaka koja nisu slova}other{Mora sadržavati najmanje # znakova koji nisu slova}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Mora sadržavati najmanje 1 znak koji nije znamenka}one{Mora sadržavati najmanje # znak koji nije znamenka}few{Mora sadržavati najmanje # znaka koja nisu znamenke}other{Mora sadržavati najmanje # znakova koji nisu znamenke}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Administrator uređaja ne dopušta upotrebu nedavne zaporke"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Uzastopno rastući ili padajući slijed brojeva ili ponavljanje brojeva nije dopušteno"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Rastući, padajući ili ponavljajući slijed brojeva nije dopušten"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Potvrdi"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Izbriši"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Zaključavanje zaslona već je promijenjeno. Pokušajte ponovo s novim zaključavanjem zaslona."</string>
@@ -2266,7 +2266,7 @@
     <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"Na ovoj stranici možete upariti slušna pomagala s ASHA protokolom i aplikacijom LE Audio. Provjerite je li vaše slušno pomagalo uključeno i spremno za uparivanje."</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Dostupna slušna pomagala"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Ne vidite svoje slušno pomagalo?"</string>
-    <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Pregled više uređaja"</string>
+    <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Pregledajte više uređaja"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Prilagodba zvuka"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"Audioopis"</string>
     <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"Poslušajte opis događaja na zaslonu u podržanim filmovima i emisijama"</string>
@@ -2345,7 +2345,7 @@
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"Odbij"</string>
     <string name="accessibility_dialog_button_stop" msgid="7584815613743292151">"Isključi"</string>
     <string name="accessibility_dialog_button_cancel" msgid="8625997437316659966">"Ostavi uključeno"</string>
-    <string name="disable_service_title" msgid="8178020230162342801">"Želite li isključiti uslugu mobilnog operatera <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
+    <string name="disable_service_title" msgid="8178020230162342801">"Želite li isključiti uslugu <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"Nema instaliranih usluga"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"Nije odabrana nijedna usluga"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"Nije dan opis."</string>
@@ -2776,7 +2776,7 @@
     <string name="data_usage_label_foreground" msgid="8782117644558473624">"Prednji plan"</string>
     <string name="data_usage_label_background" msgid="8862781660427421859">"Pozadina"</string>
     <string name="data_usage_app_restricted" msgid="312065316274378518">"ograničeno"</string>
-    <string name="data_usage_disable_mobile" msgid="6183809500102606801">"Isključiti mobilne podatke?"</string>
+    <string name="data_usage_disable_mobile" msgid="6183809500102606801">"Želite li isključiti mobilne podatke?"</string>
     <string name="data_usage_disable_mobile_limit" msgid="1370147078938479538">"Ograničenje za mobilne podatke"</string>
     <string name="data_usage_disable_4g_limit" msgid="3084868504051520840">"Postavi ograničenje za 4G"</string>
     <string name="data_usage_disable_3g_limit" msgid="8867555130268898044">"Postavi ograničenje za 2G-3G"</string>
@@ -3985,7 +3985,7 @@
     <string name="condition_expand_show" msgid="1501084007540953213">"Prikaži"</string>
     <string name="condition_expand_hide" msgid="8347564076209121058">"Sakrij"</string>
     <string name="condition_hotspot_title" msgid="7903918338790641071">"Žarišna je točka aktivna"</string>
-    <string name="condition_airplane_title" msgid="5847967403687381705">"Način rada u zrakoplovu uklj."</string>
+    <string name="condition_airplane_title" msgid="5847967403687381705">"Uključen je način rada u zrakoplovu"</string>
     <string name="condition_airplane_summary" msgid="1964500689287879888">"Mreže nisu dostupne"</string>
     <string name="condition_zen_title" msgid="7674761111934567490">"Način Ne uznemiravaj uključen"</string>
     <string name="condition_zen_summary_phone_muted" msgid="6516753722927681820">"Na telefonu je isključen zvuk"</string>
@@ -4850,7 +4850,7 @@
     <string name="mobile_data_temp_using" msgid="5211002380149434155">"Privremeno koristite <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Niste povezani"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobilni podaci neće se automatski prenositi"</string>
-    <string name="mobile_data_disable_title" msgid="8438714772256088913">"Isključiti mobilne podatke?"</string>
+    <string name="mobile_data_disable_title" msgid="8438714772256088913">"Želite li isključiti mobilne podatke?"</string>
     <string name="mobile_data_disable_message" msgid="7829414836454769970">"Nećete imati pristup podacima ni internetu putem usluge <xliff:g id="CARRIER">%s</xliff:g>. Internet će biti dostupan samo putem Wi-Fija."</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"mobilnog operatera"</string>
     <string name="not_allowed_by_ent" msgid="1958611623122304411">"Vaša organizacija ne dopušta"</string>
@@ -5090,7 +5090,7 @@
     <string name="color_selector_dialog_cancel" msgid="8667350644753900701">"Odustani"</string>
     <string name="contrast_title" msgid="6885768151336508075">"Kontrast"</string>
     <string name="contrast_standard" msgid="1097297089917185235">"Standardni"</string>
-    <string name="contrast_default" msgid="8918545965525226966">"Zadani"</string>
+    <string name="contrast_default" msgid="8918545965525226966">"Zadano"</string>
     <string name="contrast_medium" msgid="384414510709285811">"Srednji"</string>
     <string name="contrast_high" msgid="3988567609694797696">"Visoki"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Ova se aplikacija može otvoriti samo u jednom prozoru"</string>
