--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -3827,7 +3827,7 @@
     <string name="high_power_apps" msgid="5623152700992102510">"Батареяны үнөмдөө"</string>
     <string name="high_power_filter_on" msgid="447849271630431531">"Батарея үнөмдөлбөйт"</string>
     <string name="high_power_on" msgid="8778058701270819268">"Батарянын кубатын үнөмдөшпөйт"</string>
-    <string name="high_power_off" msgid="317000444619279018">"Батареянын кубатын үнөмдөө иштетилген"</string>
+    <string name="high_power_off" msgid="317000444619279018">"Батареяны үнөмдөө иштетилген"</string>
     <string name="high_power_system" msgid="3966701453644915787">"Кубатты үнөмдөөнү иштетүү мүмкүн эмес"</string>
     <string name="high_power_prompt_title" msgid="2574478825228409124">"Колдонмо фондо тынымсыз иштей берсинби?"</string>
     <string name="high_power_prompt_body" msgid="6029266540782139941">"<xliff:g id="APP_NAME">%1$s</xliff:g> фондо тынымсыз иштей берсе, батареянын кубаты тез сарпталышы мүмкүн. \n\nМуну кийин Параметрлер &gt; Колдонмолордон өзгөртө аласыз."</string>
@@ -3910,7 +3910,7 @@
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Үнөмдөлбөсүн"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Үнөмдөө"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Батареяңыз тез эле отуруп калышы мүмкүн. Мындан ары колдонмонун батареяны фондо сарптоосу чектелбейт."</string>
-    <string name="ignore_optimizations_off_desc" msgid="3324571675983286177">"Батареянын кубатын үнөмдөө үчүн сунушталат."</string>
+    <string name="ignore_optimizations_off_desc" msgid="3324571675983286177">"Батареяны үнөмдөө үчүн сунушталат."</string>
     <string name="app_list_preference_none" msgid="1635406344616653756">"Жок"</string>
     <string name="work_profile_usage_access_warning" msgid="3477719910927319122">"Бул колдонмо пайдаланган нерселердин таржымалын көрүү мүмкүнчүлүгү өчүрүлсө да, администраторуңуз ал маалыматтарды жумуш профилиңизден көрө берет"</string>
     <string name="draw_overlay" msgid="7902083260500573027">"Башка колдонмолордун үстүнөн"</string>
@@ -4794,7 +4794,7 @@
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Башка колдонмолордун үстүнөн көрүнгөн колдонмолорго Параметрлер экрандарынын үстүнөн да көрүнүүгө уруксат берилет"</string>
     <string name="allow_mock_modem" msgid="3832264806530479214">"Mock Modem\'ге уруксат берүү"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Модемдин ордуна колдонулуучу кызматты иштетүүгө уруксат берип, сынап көрөсүз. Телефон кадимки режимде колдонулуп жатканда, бул параметрди иштетпеңиз."</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Экран бөлүшүүдөн коргоону өчүрүү"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Экранды көрсөтүп жатканда коргоону өчүрүү"</string>
     <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="932295234626582052">"Экранды бөлүшүп жатканда тутумдун колдонмолорунан жана билдирмелерден коргоону өчүрөт"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Медиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа ойноткучту кадап коюу"</string>
