--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -59,7 +59,7 @@
     <string name="bluetooth_not_visible_to_other_devices" msgid="6181960579190879601">"ଅନ୍ୟ ବ୍ଲୁଟୂଥ୍‍‌ ଡିଭାଇସ୍‌ଗୁଡ଼ିକୁ ଦେଖାଯିବ ନାହିଁ"</string>
     <string name="bluetooth_only_visible_to_paired_devices" msgid="3574936359739213455">"କେବଳ ପେୟାର୍‌ ହୋଇଥିବା ଡିଭାଇସ୍‌ଗୁଡ଼ିକୁ ହିଁ ଦେଖାଦେବ"</string>
     <string name="bluetooth_devices" msgid="1063177983261608277">"ବ୍ଲୁଟୁଥ୍ ଡିଭାଇସ୍‌ଗୁଡ଼ିକ"</string>
-    <string name="bluetooth_device_name" msgid="1294669733490268384">"ଡିଭାଇସ୍‌ର ନାମ"</string>
+    <string name="bluetooth_device_name" msgid="1294669733490268384">"ଡିଭାଇସର ନାମ"</string>
     <string name="bluetooth_rename_device" msgid="4219655243836021443">"ଏହି ଡିଭାଇସ୍‌ର ନାମ ବଦଳାନ୍ତୁ"</string>
     <string name="bluetooth_rename_button" msgid="9162500408570289545">"ରିନେମ କରନ୍ତୁ"</string>
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"ଡିଭାଇସ୍‌କୁ ବିଚ୍ଛିନ୍ନ କରିବେ?"</string>
@@ -276,7 +276,7 @@
     <string name="location_settings_title" msgid="8375074508036087178">"ଲୋକେସନ୍‌"</string>
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"ଲୋକେସନ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"ବନ୍ଦ"</string>
-    <string name="location_settings_summary_location_on" msgid="4273299717586679786">"{count,plural, =1{ଚାଲୁ ଅଛି / #ଟି ଆପର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}other{ଚାଲୁ ଅଛି / #ଟି ଆପ୍ସର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}}"</string>
+    <string name="location_settings_summary_location_on" msgid="4273299717586679786">"{count,plural, =1{ଚାଲୁ ଅଛି / # ଆପର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}other{ଚାଲୁ ଅଛି / # ଆପ୍ସର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}}"</string>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"ଲୋଡ୍ ହେଉଛି…"</string>
     <string name="location_settings_footer_general" msgid="1040507068701188821">"ଆଖପାଖର ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ଅନୁମତି ଥିବା ଆପ୍ସ କନେକ୍ଟ ହୋଇଥିବା ଡିଭାଇସଗୁଡ଼ିକର ଆପେକ୍ଷିକ ଅବସ୍ଥିତିକୁ ନିର୍ଦ୍ଧାରଣ କରିପାରିବ।"</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ଆପ୍ସ ଓ ସେବାଗୁଡ଼ିକ ପାଇଁ ଲୋକେସନ ଆକ୍ସେସ ବନ୍ଦ ଅଛି। ଆପଣ ଏକ ଜରୁରୀକାଳୀନ ନମ୍ବରକୁ କଲ କରିବା କିମ୍ବା ଟେକ୍ସଟ ମେସେଜ ପଠାଇବା ସମୟରେ ଆପଣଙ୍କ ଡିଭାଇସର ଲୋକେସନ ଏବେ ବି ଜରୁରୀକାଳୀନ ଉତ୍ତରଦାତାମାନଙ୍କୁ ପଠାଯାଇପାରେ।"</string>
@@ -307,7 +307,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility" msgid="5748221179069430975">"ଆକ୍ସେସିବିଲିଟୀ ସେଟ୍‌ଅପ୍‌ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
-    <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ବାତିଲ"</string>
+    <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"ନା, ଧନ୍ୟବାଦ"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"ମୁଁ ରାଜି"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ଅଧିକ"</string>
@@ -1170,7 +1170,7 @@
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ପ୍ରାକୃତିକ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ବର୍ଦ୍ଧିତ"</string>
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"ସାଚୁରେଟେଡ୍"</string>
-    <string name="color_mode_option_automatic" msgid="2281217686509980870">"ଆଡେପ୍ଟିଭ୍"</string>
+    <string name="color_mode_option_automatic" msgid="2281217686509980870">"ଆଡେପ୍ଟିଭ"</string>
     <string name="brightness" msgid="6216871641021779698">"ଉଜ୍ଜ୍ୱଳତା ସ୍ତର"</string>
     <string name="auto_brightness_title" msgid="4239324728760986697">"ଆଡେପ୍ଟିଭ୍ ଉଜ୍ଜ୍ୱଳତା"</string>
     <string name="auto_brightness_description" msgid="6807117118142381193">"ଆପଣଙ୍କ ସ୍କ୍ରିନର ଉଜ୍ଜ୍ଵଳତା ଆପଣଙ୍କ ପରିବେଶ ଓ କାର୍ଯ୍ୟକଳାପ ଅନୁସାରେ ସ୍ୱତଃ ଆଡଜଷ୍ଟ ହେବ। ଆପଣ ସ୍ଲାଇଡର୍‌କୁ ହାତରେ ଘୁଞ୍ଚାଇ ଆଡେପ୍ଟିଭ୍ ଉଜ୍ଜ୍ୱଳତାକୁ ଆପଣଙ୍କ ପସନ୍ଦଗୁଡ଼ିକ ଜାଣିବାରେ ସାହାଯ୍ୟ କରିପାରିବେ।"</string>
@@ -1185,12 +1185,12 @@
     <string name="peak_refresh_rate_summary" msgid="3212309985294885790">"କିଛି ବିଷୟବସ୍ତୁ ପାଇଁ ରିଫ୍ରେସ ରେଟକୁ ସ୍ୱତଃ <xliff:g id="ID_1">%1$d</xliff:g> Hz ପର୍ଯ୍ୟନ୍ତ ବଢ଼ାଇଥାଏ। ବେଟେରୀର ବ୍ୟବହାର ବଢ଼ାଇଥାଏ।"</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"ସର୍ବାଧିକ ରିଫ୍ରେସ୍ ହାରକୁ ଲାଗୁ କରନ୍ତୁ"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"ଉନ୍ନତ ସ୍ପର୍ଶ ପ୍ରତିକ୍ରିୟା ଓ ଆନିମେସନ ଗୁଣବତ୍ତା ପାଇଁ ସର୍ବାଧିକ ରିଫ୍ରେସ ରେଟ। ବେଟେରୀର ବ୍ୟବହାର ବଢ଼ାଇଥାଏ।"</string>
-    <string name="adaptive_sleep_title" msgid="2987961991423539233">"ସ୍କ୍ରିନ୍ ଆଟେନ୍‌ସନ୍"</string>
+    <string name="adaptive_sleep_title" msgid="2987961991423539233">"ସ୍କ୍ରିନ ଆଟେନସନ"</string>
     <string name="adaptive_sleep_title_no_permission" msgid="1719759921214237016">"କ୍ୟାମେରା ଆକ୍ସେସ ଦରକାର"</string>
     <string name="adaptive_sleep_summary_no_permission" msgid="5822591289468803691">"ସ୍କ୍ରିନ୍ ଆଟେନସନ୍ ପାଇଁ କ୍ୟାମେରା ଆକ୍ସେସ୍ ଆବଶ୍ୟକ। ଡିଭାଇସ୍ ପର୍ସନାଲାଇଜେସନ୍ ସାର୍ଭିସେସ୍ ପାଇଁ ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରିବାକୁ ଟାପ୍ କରନ୍ତୁ"</string>
     <string name="adaptive_sleep_manage_permission_button" msgid="1404510197847664846">"ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
-    <string name="adaptive_sleep_description" msgid="1835321775327187860">"ଯଦି ଆପଣ ଏହାକୁ ଦେଖୁଥିବେ ତେବେ ଆପଣଙ୍କର ସ୍କ୍ରିନ୍ ବନ୍ଦ ହୋଇନଥାଏ"</string>
-    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"ସ୍କ୍ରିନ୍‌କୁ କେହି ଦେଖୁଛନ୍ତି ନା ନାହିଁ ତାହା ଦେଖିବା ପାଇଁ \'ସ୍କ୍ରିନ୍ ଆଟେନ୍‌ସନ୍\' ସାମ୍ନା କ୍ୟାମେରା ବ୍ୟବହାର କରେ। ଏହା ଡିଭାଇସ୍‌ରେ କାର୍ଯ୍ୟ କରିଥାଏ ଏବଂ ଛବିଗୁଡ଼ିକୁ କେବେ ବି ଷ୍ଟୋର୍ କରାଯାଇ ନଥାଏ କିମ୍ବା Googleକୁ ପଠାଯାଇ ନଥାଏ।"</string>
+    <string name="adaptive_sleep_description" msgid="1835321775327187860">"ଆପଣ ଏହାକୁ ଦେଖୁଥିଲେ ଆପଣଙ୍କ ସ୍କ୍ରିନ ବନ୍ଦ ହୋଇନଥାଏ"</string>
+    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"ସ୍କ୍ରିନକୁ କେହି ଦେଖୁଛନ୍ତି ନା ନାହିଁ ତାହା ଦେଖିବା ପାଇଁ \'ସ୍କ୍ରିନ ଆଟେନସନ\' ଫ୍ରଣ୍ଟ କେମେରା ବ୍ୟବହାର କରେ। ଏହା ଡିଭାଇସରେ କାର୍ଯ୍ୟ କରିଥାଏ ଏବଂ ଇମେଜଗୁଡ଼ିକୁ କେବେ ବି ଷ୍ଟୋର କରାଯାଇ ନଥାଏ କିମ୍ବା Googleକୁ ପଠାଯାଇ ନଥାଏ।"</string>
     <string name="adaptive_sleep_contextual_slice_title" msgid="7467588613212629758">"ସ୍କ୍ରିନ୍ ଆଟେନସନ୍ ଚାଲୁ କରନ୍ତୁ"</string>
     <string name="adaptive_sleep_contextual_slice_summary" msgid="2993867044745446094">"ସ୍କ୍ରିନକୁ ଦେଖିବା ସମୟରେ ଏହାକୁ ଚାଲୁ ରଖନ୍ତୁ"</string>
     <string name="power_consumption_footer_summary" msgid="4901490700555257237">"ଅଧିକ ଲମ୍ବା ସ୍କ୍ରିନ ଟାଇମଆଉଟ ଅଧିକ ବେଟେରୀ ବ୍ୟବହାର କରିବ।"</string>
@@ -1210,7 +1210,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"ତୀବ୍ରତା"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"ଆଦୌ ସ୍ୱଚାଳିତ ଭାବେ ଚାଲୁ ହେବନାହିଁ"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"<xliff:g id="ID_1">%1$s</xliff:g> ରେ ସ୍ୱଚାଳିତ ଭାବେ ଅନ୍‌ ହେବ।"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"ସୂର୍ଯ୍ୟାସ୍ତରେ ସ୍ୱଚାଳିତ ଭାବେ ଅନ୍‌ ହେବ।"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"ସୂର୍ଯ୍ୟାସ୍ତ ସମୟରେ ସ୍ୱତଃ ଚାଲୁ ହେବ"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"କେବେ ବି ସ୍ୱତଃ ବନ୍ଦ ହେବନାହିଁ"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"<xliff:g id="ID_1">%1$s</xliff:g> ରେ ସ୍ୱଚାଳିତ ଭାବେ ଅଫ୍‌ କରିବ।"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"ସୂର୍ଯ୍ୟଦୋୟରେ ସ୍ୱଚାଳିତ ଭାବେ ଅଫ୍‌ ହେବ।"</string>
@@ -1241,7 +1241,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ଶୋଇବା ସମୟ ମୋଡ ସେଟିଂସ"</string>
     <string name="even_dimmer_display_title" msgid="8589063452814896327">"ଆହୁରି ଡିମ"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"ସାଧାରଣ ଅପେକ୍ଷା ଅଧିକ ଡିମ ହେବା ପାଇଁ ଡିଭାଇସକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
-    <string name="screen_timeout" msgid="7709947617767439410">"ସ୍କ୍ରିନ୍ ସମୟ ସମାପ୍ତିର ଅବଧି"</string>
+    <string name="screen_timeout" msgid="7709947617767439410">"ସ୍କ୍ରିନ ଟାଇମଆଉଟ"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"ନିଷ୍କ୍ରିୟତାର <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> ପରେ"</string>
     <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"ସେଟ ହୋଇନାହିଁ"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ୱାଲପେପର୍"</string>
@@ -4331,7 +4331,7 @@
     <string name="storage_audio" msgid="5994664984472140386">"ଅଡିଓ"</string>
     <string name="storage_apps" msgid="3564291603258795216">"ଆପ୍ସ"</string>
     <string name="storage_documents_and_other" msgid="3293689243732236480">"ଡକ୍ୟୁମେଣ୍ଟଗୁଡ଼ିକ ଏବଂ ଅନ୍ୟ"</string>
-    <string name="storage_system" msgid="8472410119822911844">"ସିଷ୍ଟମ୍"</string>
+    <string name="storage_system" msgid="8472410119822911844">"ସିଷ୍ଟମ"</string>
     <string name="storage_trash" msgid="2807138998886084856">"ଟ୍ରାସ୍"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"ଟ୍ରାସ୍ ଖାଲି କରିବେ?"</string>
     <string name="storage_trash_dialog_ask_message" msgid="8982602137242358798">"ଟ୍ରାସରେ <xliff:g id="TOTAL">%1$s</xliff:g> ଫାଇଲ୍ ଅଛି। ସମସ୍ତ ଆଇଟମକୁ ସବୁଦିନ ପାଇଁ ଡିଲିଟ୍ କରାଯିବ ଏବଂ ଆପଣ ସେଗୁଡ଼ିକୁ ରିଷ୍ଟୋର୍ କରିବା ପାଇଁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
@@ -4382,7 +4382,7 @@
     <string name="autofill_max_visible_datasets" msgid="4970201981694392229">"ସର୍ବାଧିକ ଦେଖାଯାଉଥିବା ଡାଟାସେଟଗୁଡ଼ିକ"</string>
     <string name="autofill_reset_developer_options" msgid="6425613608979498608">"ଡିଫଲ୍ଟ ମୂଲ୍ୟକୁ ରିସେଟ୍‌ କରନ୍ତୁ"</string>
     <string name="autofill_reset_developer_options_complete" msgid="1276741935956594965">"ଅଟୋଫିଲ୍‌ ଡେଭଲପର୍‍ ବିକଳ୍ପଗୁଡିକ ରିସେଟ୍ ହୋଇଛି"</string>
-    <string name="location_category" msgid="3496759112306219062">"ଲୋକେସନ୍"</string>
+    <string name="location_category" msgid="3496759112306219062">"ଲୋକେସନ"</string>
     <string name="location_indicator_settings_title" msgid="6655916258720093451">"ଷ୍ଟାଟସ୍ ବାରରେ ଲୋକେସନ୍ ସୂଚକ"</string>
     <string name="location_indicator_settings_description" msgid="2888022085372804021">"ନେଟୱାର୍କ ଏବଂ ସଂଯୋଗ ସମେତ, ସମସ୍ତ ଲୋକେସନ୍ ଦେଖାନ୍ତୁ"</string>
     <string name="enable_gnss_raw_meas_full_tracking" msgid="1206679951510243341">"ପୂର୍ଣ୍ଣ GNSS ପରିମାପ ବାଧ୍ୟ କରନ୍ତୁ"</string>
@@ -4982,7 +4982,7 @@
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ଅତିରିକ୍ତ ସୂଚନା ଦେଖାନ୍ତୁ"</string>
     <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"ସମୟ, ପାଣିପାଗ କିମ୍ବା ଅନ୍ୟ ସୂଚନା ପରି ବିଷୟଗୁଡ଼ିକୁ ସ୍କ୍ରିନ ସେଭରରେ ଡିସପ୍ଲେ କରନ୍ତୁ"</string>
     <string name="dream_home_controls_toggle_title" msgid="706799741564479248">"ହୋମ କଣ୍ଟ୍ରୋଲ୍ସ ଦେଖାନ୍ତୁ"</string>
-    <string name="dream_home_controls_toggle_summary" msgid="4102519907917430579">"ସ୍କ୍ରିନ ସେଭରରୁ ହୋମ କଣ୍ଟ୍ରୋଲ୍ସ ବଟନ ଦେଖାନ୍ତୁ"</string>
+    <string name="dream_home_controls_toggle_summary" msgid="4102519907917430579">"ସ୍କ୍ରିନ ସେଭରରୁ ହୋମ କଣ୍ଟ୍ରୋଲ ବଟନ ଦେଖାନ୍ତୁ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ଅଧିକ ସେଟିଂସ"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"ଆପଣଙ୍କ ସ୍କ୍ରିନ ସେଭର ବାଛନ୍ତୁ"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"ଆପଣଙ୍କ ଟାବଲେଟକୁ ଡକ କରାଯାଇଥିବା ସମୟରେ ଆପଣ ଆପଣଙ୍କ ସ୍କ୍ରିନରେ କଣ ଦେଖିବେ ତାହା ବାଛନ୍ତୁ। ଏକ ସ୍କ୍ରିନ ସେଭର ବ୍ୟବହାର କରାଯିବା ସମୟରେ ଆପଣଙ୍କ ଡିଭାଇସ ଅଧିକ ଏନର୍ଜି ବ୍ୟବହାର କରିପାରେ।"</string>
